syntax = "proto3";

package top.criwits.scaleda.kernel.net;

service Remote {
  rpc Run(RunRequest) returns (stream RunReply) {}
  rpc GetProfiles(Empty) returns (ProfilesReply) {}
  rpc GetRemoteInfo(Empty) returns (RemoteInfo) {}
}

message Empty {}

message StringTriple {
  string a = 1;
  string b = 2;
}

message RunRequest {
  repeated string commands = 1;
  string path = 2;
  repeated StringTriple envs = 3;
}

enum RunReplyType {
  RUN_REPLY_TYPE_RETURN = 0;
  RUN_REPLY_TYPE_STDOUT = 1;
  RUN_REPLY_TYPE_STDERR = 2;
}

message RunReply {
  RunReplyType reply_type = 1;
  string str_value = 2;
  int32 int_value = 3;
}

message RemoteProfile {
  string name = 1;
  string toolchain_type = 2;
}
message ProfilesReply {
  repeated RemoteProfile profiles = 1;
}

enum RemoteOsType {
  REMOTE_OS_TYPE_LINUX = 0;
  REMOTE_OS_TYPE_WINDOWS = 1;
  REMOTE_OS_TYPE_MACOS = 2;
}
message RemoteInfo {
  RemoteOsType os = 1;
}